--- a/Angular/Orenda-Ecommerce/angular.json
+++ b/Angular/Orenda-Ecommerce/angular.json
@@ -94,7 +94,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js.map"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           }
         }
