--- a/ORD_Backend/Infrastructure/Infrastructure.csproj
+++ b/ORD_Backend/Infrastructure/Infrastructure.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="Dapper" Version="2.1.35" />
+	  <PackageReference Include="MailKit" Version="4.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
