--- a/ORD_Backend/Presentation/appsettings.json
+++ b/ORD_Backend/Presentation/appsettings.json
@@ -5,8 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=127.0.0.1;port=3307;Database=orenda_courseint;User=root;Password=123456;"
+  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;port=3307;Database=orenda_courseint;User=root;Password=123456;"
+    "DefaultConnection": "server=ns-up.h.filess.io;user=OrdIntProjectDatabase_hidebillno;database=OrdIntProjectDatabase_hidebillno;port=3305;password=4f6303f6e5cc9f6f6f79ad3743ef40a08f83e543"
+  },
+  "EmailSettings": {
+    "Email": "ord@example.com",
+    "Password": "123456",
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": "587"
   },
   "AllowedHosts": "*",
   "JWT": {
