--- a/ORD_Backend/Infrastructure/Infrastructure.csproj
+++ b/ORD_Backend/Infrastructure/Infrastructure.csproj
@@ -9,7 +9,6 @@
 	  <PackageReference Include="Dapper" Version="2.1.35" />
 	  <PackageReference Include="MailKit" Version="4.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
-	  <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -19,6 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MySqlConnector" Version="2.3.5" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.0" />
   </ItemGroup>
 
