--- a/ORD_Backend/Presentation/appsettings.json
+++ b/ORD_Backend/Presentation/appsettings.json
@@ -5,12 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "connectionstrings": {
-    "defaultconnection": "server=127.0.0.1;port=3307;database=orenda_courseint;user=root;password=123456;",
-  },
-  //"ConnectionStrings": {
-  //  "DefaultConnection": "server=ns-up.h.filess.io;user=OrdIntProjectDatabase_hidebillno;database=OrdIntProjectDatabase_hidebillno;port=3305;password=4f6303f6e5cc9f6f6f79ad3743ef40a08f83e543"
+  //"connectionstrings": {
+  //  "defaultconnection": "server=127.0.0.1;port=3307;database=orenda_courseint;user=root;password=123456;"
   //},
+  "connectionstrings": {
+    "defaultconnection": "server=127.0.0.1;port=3306;database=orenda_courseint_local;user=root;password=canh2003;"
+  },
   "EmailSettings": {
     "Email": "havancanh2003@gmail.com",
     "Password": "kmmkfzspuphswbfa",
