--- a/Angular/Orenda-Ecommerce/angular.json
+++ b/Angular/Orenda-Ecommerce/angular.json
@@ -85,6 +85,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css",
               "node_modules/bootstrap/dist/js/bootstrap.min.css"
             ],
             "scripts": [
